--- a/themes/beautifulhugo/layouts/index.html
+++ b/themes/beautifulhugo/layouts/index.html
@@ -2,6 +2,10 @@
   <div role="main" class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        <hr>
+        <a class="btn btn-primary btn-block btn-lg" href="/sweep" role="button">I want a Sweep</a>
+        <hr>
+        <a class="btn btn-primary btn-block btn-lg" href="/inspection" role="button">I want a Camera Inspection</a>
         {{ with .Content }}
           <div class="well">
             {{.}}
