--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -7,7 +7,9 @@
       </article>
       
       {{ if .Params.contactus }}
-        <a class="btn btn-success btn-block btn-lg" href="/contact" role="button">Contact Us</a>
+        <a class="btn btn-primary btn-block btn-lg" href="tel:0879826650">
+          Click to Call <span class="glyphicon glyphicon-earphone" style="padding-left:10px; padding-right:10px;"></span>John
+        </a>
       {{ end }}
 
     </div>
