--- a/themes/beautifulhugo/layouts/partials/head.html
+++ b/themes/beautifulhugo/layouts/partials/head.html
@@ -33,6 +33,7 @@
   <meta property="og:url" content="{{ . | absURL }}" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="{{ .Site.Title }}" />
+  <meta name="google-site-verification" content="nb9kmt5jSoTXZDqafBc4Ma7P5zAFbUg12HJbQlc_ssc" />
 <!-- Hugo Version number -->
   {{ hugo.Generator -}}
 <!-- Links and stylesheets -->
