--- a/themes/beautifulhugo/layouts/partials/head.html
+++ b/themes/beautifulhugo/layouts/partials/head.html
@@ -8,11 +8,8 @@
   <meta property="og:title" content="{{ . }}" />
   <meta name="twitter:title" content="{{ . | truncate 70 }}" />
 {{- end }}
-{{- with .Description | default .Params.subtitle | default .Summary }}
-  <meta name="description" content="{{ . }}">
-  <meta property="og:description" content="{{ . }}">
-  <meta name="twitter:description" content="{{ . | truncate 200 }}">
-{{- end }}
+  <meta name="description" content="Chimney Cleaning 🧹 Camera Inspection 📸 Sligo Mayo Roscommon Leitrim">
+  <meta property="og:description" content="Chimney Cleaning 🧹 Camera Inspection 📸 Sligo Mayo Roscommon Leitrim">
   <meta name="author" content="{{ .Site.Author.name }}"/>
 {{- with .Site.Params.favicon }}
   <link href='{{ . | absURL }}' rel='icon' type='image/x-icon'/>
