--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -19,8 +19,8 @@
           </div>
           <div class="form-group">
             <label for="numberInput">Contact Number</label>
-            <input type="email" class="form-control" id="numberInput" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your number with anyone else.</small>
+            <input type="number" class="form-control" id="numberInput" aria-describedby="numberHelp">
+            <small id="numberHelp" class="form-text text-muted">We'll never share your number with anyone else.</small>
           </div>
           <button class="btn btn-primary" type="submit">Submit</button>
         </form>
