--- a/themes/beautifulhugo/layouts/_default/single.html
+++ b/themes/beautifulhugo/layouts/_default/single.html
@@ -15,14 +15,14 @@
         <form data-static-form-name="contact" class="form-group">
           <div class="form-group">
             <label for="nameInput">Name</label>
-            <input name="name" type="text" class="form-control" id="nameInput">
+            <input name="name" type="text" class="form-control contact-field input-lg" id="nameInput">
           </div>
           <div class="form-group">
             <label for="numberInput">Contact Number</label>
-            <input name="number" type="tel" class="form-control" id="numberInput" aria-describedby="numberHelp">
+            <input name="number" type="tel" class="form-control contact-field input-lg" id="numberInput" aria-describedby="numberHelp">
             <small id="numberHelp" class="form-text text-muted">We'll never share your number with anyone else.</small>
           </div>
-          <button class="btn btn-primary" type="submit">Submit</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
         </form>
       {{ end }}
     </div>
