--- a/themes/beautifulhugo/layouts/index.html
+++ b/themes/beautifulhugo/layouts/index.html
@@ -7,7 +7,7 @@
         <hr>
         <a class="btn btn-primary btn-block btn-lg" href="/inspection" role="button">I want a Camera Inspection</a>
         <hr>
-        <a class="btn btn-primary btn-block btn-lg" href="/callback" role="button">Request a Call Back</a>
+        <a class="btn btn-success btn-block btn-lg" href="/callback" role="button">Request a Call Back</a>
         {{ with .Content }}
           <div class="well">
             {{.}}
